--- a/vignettes/epicontacts.Rmd
+++ b/vignettes/epicontacts.Rmd
@@ -48,8 +48,6 @@ The package includes the following features:
 - **`get_clusters`**: assign clusters and corresponding cluster sizes to linelist of an epi_contacts object
 - **`graph3D()`**: 3D graph from an `epi_contacts` object
 
-
-
 ## Installation
 
 ### GitHub
@@ -93,13 +91,13 @@ str(mers.korea.2015)
 What features are in the line list?
 
 ```{r}
-colnames((mers.korea.2015[[1]]))
+colnames((mers.korea.2015$linelist))
 ```
 
 What about the contact dataset?
 
 ```{r}
-colnames((mers.korea.2015[[2]]))
+colnames((mers.korea.2015$contacts))
 ```
 
 ### Creating `epi_contacts` Object
@@ -107,7 +105,7 @@ colnames((mers.korea.2015[[2]]))
 In order to create the `epi_contacts` object, both the line list and contact data frames must be passed to `make_epi_contacts()`. This function accommodates instances when the respective identifiers are not the first columns of these data frames (see the "id", "from" and "to" arguments). `make_epi_contacts()` can also account for contact networks that have a direction (see "directed" argument).
 
 ```{r}
-merskor15 <- make_epi_contacts(linelist = mers.korea.2015[[1]], contacts = mers.korea.2015[[2]], directed = FALSE)
+merskor15 <- make_epi_contacts(linelist = mers.korea.2015$linelist, contacts = mers.korea.2015$contacts, directed = FALSE)
 class(merskor15)
 summary(merskor15)
 ```
